Refactor face detection and recognition features; update database schema and configuration

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,7 @@
 API_KEY="your-api-key"
 API_URL="https://serverless.roboflow.com"
 MODEL_ID="your-model-id"
-CONF_THRESHOLD="0.8"
+FACE_DETEC_THRESHOLD="0.5"
+FACE_RECO_THRESHOLD="0.8"
+
+DATABASE_PATH="you-database-path"
